@@ -12,6 +12,7 @@ Version 0.3l
 * Added the odd shop to Rigard shopping street. You can buy some strapons there.
 * Fixed some bullshit enemy AI. Ability use should actually draw SP now. Might have caused some bugs, report if the game crashes mid-fight.
 * Kiai anal fix.
+* Fixed a few bugs in feline scenes.
 
 --------------------------------------------
              PREVIOUS VERSIONS
